fixes issues with light/dark mode

--- a/Frontend/css/slideshow.css
+++ b/Frontend/css/slideshow.css
@@ -13,8 +13,7 @@ img {vertical-align: middle;}
 
 /* Slideshow container */
 .slideshow-container {
-  background-color: #111;
-  color:white;
+  background-color: var(--color-bg);
   /* width:fit-content; */
   min-width: fit-content;
   min-height: 155px;
@@ -31,7 +30,7 @@ img {vertical-align: middle;}
   width: auto;
   padding: 30px 10px;
   margin-top: -22px;
-  color: white;
+  color: #818181;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
